welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: not enough arguments for method marquerSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marquerSol()
            ^MethodsPicture:17: error: not enough arguments for method marquerSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marquerSol()
            ^MethodsPicture:21: error: not enough arguments for method marquerSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marquerSol()
            ^MethodsPicture:35: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireV()
          ^